Z-Index Fix

--- a/css/components/bentogrid.module.css
+++ b/css/components/bentogrid.module.css
@@ -5,6 +5,7 @@
   grid-template-columns: repeat(3, minmax(0, 1fr));
   gap: 16px;
   justify-content: center;
+  z-index: 100;
 }
 
 .sectionTitle, .more {
